# go-barretenberg

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  bindings.go  bindings_test.go  go.mod
.github/workflows/: ci.yml
libnoir_ffi/: Cargo.toml  barretenberg_ffi.h  noir_ffi.h
libnoir_ffi/src/: lib.rs
